# space_invaders

./: .gitignore  Space_invaders.py  controls.py  entity.py  gun.py  mous_events.py  pyproject.toml  run.py
game/: alien.py  main.py  player.py
space_invaders/: controls.py  gun.py  main.py
system/: component.py  componentManager.py  system.py  systemManager.py
