[tool.poetry]
name = "s-i"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "space_invaders"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
